fix loading screen and alignment of sidelinks

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -34,7 +34,7 @@
   border-bottom: solid #f0efef 1px;
   padding-bottom: 16px;
   width: 230px;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px 30px;
   cursor: pointer;
 }
 
